--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,79 @@
+absl-py==2.3.1
+astunparse==1.6.3
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+filelock==3.16.1
+flatbuffers==25.2.10
+fsspec==2025.3.0
+gast==0.4.0
+google-auth==2.40.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.70.0
+h5py==3.11.0
+idna==3.10
+imageio==2.35.1
+importlib_metadata==8.5.0
+Jinja2==3.1.6
+joblib==1.4.2
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+lazy_loader==0.4
+libclang==18.1.1
+Markdown==3.7
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.1
 numpy==1.24.3
-tensorflow==2.13.1
-scikit-learn==0.22.2
-scikit-image==0.17.2
-imageio==2.5.0
-medpy==0.4.0
-Pillow==6.2.1
-scipy==1.4.1
-pandas==0.25.3
-tqdm==4.32.1
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.3.1
+opt_einsum==3.4.0
+packaging==25.0
+pandas==2.0.3
+pillow==10.4.0
+pkg_resources==0.0.0
+protobuf==3.19.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyWavelets==1.4.1
+requests==2.32.4
+requests-oauthlib==2.0.0
+rsa==4.9.1
+scikit-image==0.21.0
+scikit-learn==1.3.2
+scipy==1.10.1
+six==1.17.0
+sympy==1.13.3
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tifffile==2023.7.10
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
+triton==3.0.0
+typing_extensions==4.8.0
+tzdata==2025.2
+urllib3==2.2.3
+Werkzeug==3.0.6
+wrapt==1.17.3
+zipp==3.20.2
