--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 absl-py==2.3.1
+affine==2.4.0
 astunparse==1.6.3
+attrs==25.3.0
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+click==8.1.8
+click-plugins==1.1.1.2
+cligj==0.7.2
 filelock==3.16.1
 flatbuffers==25.2.10
 fsspec==2025.3.0
@@ -47,9 +52,11 @@ pkg_resources==0.0.0
 protobuf==3.19.6
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyWavelets==1.4.1
+rasterio==1.3.11
 requests==2.32.4
 requests-oauthlib==2.0.0
 rsa==4.9.1
@@ -57,6 +64,7 @@ scikit-image==0.21.0
 scikit-learn==1.3.2
 scipy==1.10.1
 six==1.17.0
+snuggs==1.4.7
 sympy==1.13.3
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
@@ -70,6 +78,7 @@ tifffile==2023.7.10
 torch==2.4.1
 torchaudio==2.4.1
 torchvision==0.19.1
+tqdm==4.67.1
 triton==3.0.0
 typing_extensions==4.8.0
 tzdata==2025.2
